added shopping cart history to API
